feat: converted getFlowNodeInstanceKeysByIdAndStates